--- a/package.json
+++ b/package.json
@@ -27,5 +27,10 @@
   "devDependencies": {
     "mocha": "^10.0.0",
     "should": "^13.1.3"
-  }
+  },
+"pkg": {
+  "scripts": [
+    "**/*.json"
+  ]
+}
 }
